kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: online-shop-deployment
  labels:
    app: online-shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: online-shop
  template:
    metadata:
      labels:
        app: online-shop
    spec:
      containers:
      - name: online-shop
        image: shrij34/online_shop:latest
        ports:
        - containerPort: 3000
