kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: online-shop-service
spec:
  type: LoadBalancer
  selector:
    app: online-shop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
